--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ed1af174",
+   "id": "6da0a203",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dda5eec3",
+   "id": "1b82edd1",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4def7289",
+   "id": "4e9e6423",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "836c95c0",
+   "id": "d692962f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b004dc1",
+   "id": "e7e0d454",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0362fdb4",
+   "id": "e0fc2ba1",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2360822f",
+   "id": "ebcbef27",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0e25388e",
+   "id": "02575d72",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8be4580",
+   "id": "a5d2cbf8",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22b2438e",
+   "id": "5538a833",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5b684af3",
+   "id": "ca48e11b",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ba11f352",
+   "id": "262b37fd",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "aa96f34d",
+   "id": "21524f52",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8190c264",
+   "id": "c60accba",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "df913a44",
+   "id": "6971f7dd",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4672b6ff",
+   "id": "03ff65d6",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e3af6b56",
+   "id": "5f21cdd6",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c77b0a43",
+   "id": "5a0538bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "588dbadd",
+   "id": "f8b95356",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "58f3b7ad",
+   "id": "02d4af37",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "27fc37e3",
+   "id": "2bceb62e",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f4f2096c",
+   "id": "152282be",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5af39207",
+   "id": "0161cbcd",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "0a0cea3c",
+   "id": "f3755a76",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "7b3763cb",
+   "id": "6e861c2a",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "bf1eb1d8",
+   "id": "0a2aa411",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "3c562fbe",
+   "id": "6f28c38e",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7521aa26",
+   "id": "3fae94a1",
    "metadata": {},
    "source": [
     "# Exercise: Name triangles\n",
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "408efabd",
+   "id": "139d5eae",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "721745e5",
+   "id": "dbc6cfe7",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "20b8a696",
+   "id": "7a6dee0d",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc290127",
+   "id": "45e1fc9a",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "8151ef46",
+   "id": "52c22361",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "38a0f5a2",
+   "id": "3a6c1a40",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ba6472e",
+   "id": "f6d5cfcf",
    "metadata": {},
    "source": [
     "# `while` loops\n",
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "6432d76a",
+   "id": "a4e459b8",
    "metadata": {
     "scrolled": true
    },
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "911442ca",
+   "id": "5e3d8ff4",
    "metadata": {},
    "source": [
     "# Exercise: Sum to 100\n",
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "5210a535",
+   "id": "82e6e827",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "293c2e38",
+   "id": "46c30fbb",
    "metadata": {},
    "source": [
     "# `isdigit` is a *string* method\n",
@@ -979,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "2e7c151a",
+   "id": "bab698c4",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b582401f",
+   "id": "3147409a",
    "metadata": {},
    "source": [
     "# Full list of methods on strings\n",
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e7df6cd",
+   "id": "b005b68c",
    "metadata": {},
    "source": [
     "# Controlling our loops\n",
@@ -1043,21 +1043,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "b1c0c726",
+   "execution_count": 52,
+   "id": "d160efe0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your name: Reuven\n",
-      "Hello, Reuven!\n",
-      "Enter your name: world\n",
-      "Hello, world!\n",
-      "Enter your name: out there\n",
-      "Hello, out there!\n",
-      "Enter your name: \n"
+      "Enter your name: asdfa\n",
+      "Hello, asdfa!\n",
+      "Enter your name: asdfadfafsa\n",
+      "Hello, asdfadfafsa!\n",
+      "Enter your name: \n",
+      "Continuing after the while loop...\n"
      ]
     }
    ],
@@ -1070,16 +1069,64 @@
     "    if name == '':  # empty string?\n",
     "        break       # stop asking, break from the loop\n",
     "        \n",
-    "    print(f'Hello, {name}!')"
+    "    print(f'Hello, {name}!')\n",
+    "    \n",
+    "print('Continuing after the while loop...')    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b534b3e",
+   "id": "b33e40fc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "total = 0\n",
+    "\n",
+    "s = input('Enter a number: ').strip()  # potentially dangerous -- also not quite what we want\n",
+    "while total < 100:\n",
+    "    \n",
+    "    # here, we have an if-else -- we could replace this with a \"continue\"\n",
+    "    if s.isdigit():\n",
+    "        n = int(s)\n",
+    "        total += n    # this is known, in Python, as \"inplace add,\" or \"iadd\".  \n",
+    "        print(f'You entered {n}, total is now {total}')\n",
+    "    else:\n",
+    "        print(f'{s} is not a number')\n",
+    "\n",
+    "print('Done.')              "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0ee6454",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rewriting with continue\n",
+    "\n",
+    "total = 0\n",
+    "\n",
+    "s = input('Enter a number: ').strip()  # potentially dangerous -- also not quite what we want\n",
+    "while total < 100:\n",
+    "    if not s.isdigit():   # not numeric; go back for more\n",
+    "        continue\n",
+    "    \n",
+    "    n = int(s)\n",
+    "    total += n \n",
+    "    print(f'You entered {n}, total is now {total}')\n",
+    "\n",
+    "print('Done.')              "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1471b3d8",
+   "metadata": {},
+   "source": [
+    "# Exercise: "
+   ]
   }
  ],
  "metadata": {
