--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6da0a203",
+   "id": "0920f185",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1b82edd1",
+   "id": "0354782a",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4e9e6423",
+   "id": "f477d77c",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d692962f",
+   "id": "f2320772",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7e0d454",
+   "id": "0cd61664",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e0fc2ba1",
+   "id": "90c098c9",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebcbef27",
+   "id": "52588c46",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "02575d72",
+   "id": "36dc15ef",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5d2cbf8",
+   "id": "b4309ddc",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5538a833",
+   "id": "11cf85e9",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ca48e11b",
+   "id": "24dfc99f",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "262b37fd",
+   "id": "7dda2260",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "21524f52",
+   "id": "bb8f9f1f",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c60accba",
+   "id": "1e8f3adc",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6971f7dd",
+   "id": "cc065abc",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03ff65d6",
+   "id": "e6b07681",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5f21cdd6",
+   "id": "6382ffca",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5a0538bd",
+   "id": "c5d6e66c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f8b95356",
+   "id": "233afdf4",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "02d4af37",
+   "id": "0df77bde",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2bceb62e",
+   "id": "53317a3b",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "152282be",
+   "id": "45012921",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0161cbcd",
+   "id": "0fd21588",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "f3755a76",
+   "id": "b8b884c2",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "6e861c2a",
+   "id": "fcf2bae1",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "0a2aa411",
+   "id": "48406501",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "6f28c38e",
+   "id": "742b1893",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fae94a1",
+   "id": "fbe36d54",
    "metadata": {},
    "source": [
     "# Exercise: Name triangles\n",
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "139d5eae",
+   "id": "6a6a1ec6",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "dbc6cfe7",
+   "id": "e31cc841",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "7a6dee0d",
+   "id": "42adc8b4",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45e1fc9a",
+   "id": "0da4f475",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "52c22361",
+   "id": "ffb580c4",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "3a6c1a40",
+   "id": "6fff6fd5",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6d5cfcf",
+   "id": "ad2c4730",
    "metadata": {},
    "source": [
     "# `while` loops\n",
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "a4e459b8",
+   "id": "919df98e",
    "metadata": {
     "scrolled": true
    },
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e3d8ff4",
+   "id": "5cd7a7b1",
    "metadata": {},
    "source": [
     "# Exercise: Sum to 100\n",
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "82e6e827",
+   "id": "3998d184",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46c30fbb",
+   "id": "3a93e446",
    "metadata": {},
    "source": [
     "# `isdigit` is a *string* method\n",
@@ -979,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "bab698c4",
+   "id": "de5faf20",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3147409a",
+   "id": "43522baa",
    "metadata": {},
    "source": [
     "# Full list of methods on strings\n",
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b005b68c",
+   "id": "5b4e5a9f",
    "metadata": {},
    "source": [
     "# Controlling our loops\n",
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "d160efe0",
+   "id": "c08f2236",
    "metadata": {},
    "outputs": [
     {
@@ -1077,15 +1077,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b33e40fc",
+   "id": "19372774",
    "metadata": {},
    "outputs": [],
    "source": [
     "total = 0\n",
     "\n",
-    "s = input('Enter a number: ').strip()  # potentially dangerous -- also not quite what we want\n",
+    "\n",
     "while total < 100:\n",
-    "    \n",
+    "    s = input('Enter a number: ').strip()     \n",
+    "\n",
     "    # here, we have an if-else -- we could replace this with a \"continue\"\n",
     "    if s.isdigit():\n",
     "        n = int(s)\n",
@@ -1099,17 +1100,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d0ee6454",
+   "execution_count": 53,
+   "id": "8977b92c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 30\n",
+      "You entered 30, total is now 30\n",
+      "Enter a number: asdfafa\n",
+      "Enter a number: asdfafsafa\n",
+      "Enter a number: 90\n",
+      "You entered 90, total is now 120\n",
+      "Done.\n"
+     ]
+    }
+   ],
    "source": [
     "# rewriting with continue\n",
     "\n",
     "total = 0\n",
     "\n",
-    "s = input('Enter a number: ').strip()  # potentially dangerous -- also not quite what we want\n",
     "while total < 100:\n",
+    "    s = input('Enter a number: ').strip()\n",
     "    if not s.isdigit():   # not numeric; go back for more\n",
     "        continue\n",
     "    \n",
@@ -1122,11 +1137,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1471b3d8",
+   "id": "b4e1d73e",
    "metadata": {},
    "source": [
-    "# Exercise: "
+    "# Exercise: Sum digits\n",
+    "\n",
+    "1. Ask the user to enter a string containing digits.\n",
+    "2. Set `total` to 0.\n",
+    "3. Go through each character in the string.\n",
+    "    - If it's a digit, then add it to `total`\n",
+    "    - If not, then scold the user\n",
+    "4. Print the total    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "110025da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
